tests/errors/lexer.bfasm1
nul
 one
  two
   three
    four


#[error: lexer 2 1 ]